Correction/Istio/advanced/request-authent.yml
apiVersion:  security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: ingress-jwt
spec:
  jwtRules:
  - issuer: "testing@secure.istio.io"
    jwksUri: "https://raw.githubusercontent.com/istio/istio/release-1.17/security/tools/jwt/samples/jwks.json"
